# egeland_test

./: .gitignore  pyproject.toml  readme.md  requirements.txt
task1/: .env_template  create_tables.sql  docker-compose.yml  readme.md  tiktok_parser.py
task2/: readme.md
task3/: etl.py  readme.md  requests.sql
