[tool.poetry]
name = "egeland"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
dotenv = "^0.9.9"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
structlog = "^25.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
